src/test/rustdoc-ui/tuple-variadic-check.stderr
error: `#[doc(tuple_variadic)]` must used on the first of a set of tuple trait impls with varying arity
  --> $DIR/tuple-variadic-check.rs:12:7
   |
LL | #[doc(tuple_variadic)]
   |       ^^^^^^^^^^^^^^

error: aborting due to previous error

